--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,7 @@
 		</plugins>
 	</reporting>
 
+
 	<dependencyManagement>
 		<dependencies>
 
@@ -195,8 +196,15 @@
 				<artifactId>commons-codec</artifactId>
 				<version>1.17.1</version>
 			</dependency>
+			<dependency>
+				<groupId>com.github.java-json-tools</groupId>
+				<artifactId>json-patch</artifactId>
+				<version>1.13</version>
+			</dependency>
+			
 		</dependencies>
 	</dependencyManagement>
+
 
 	<dependencies />
 
