--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -28,7 +28,33 @@ jobs:
         echo "<settings xmlns=\"http://maven.apache.org/SETTINGS/1.0.0\"
           xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
           xsi:schemaLocation=\"http://maven.apache.org/SETTINGS/1.0.0 https://maven.apache.org/xsd/settings-1.0.0.xsd\">
+          <activeProfiles>
+            <activeProfile>github</activeProfile>
+          </activeProfiles>
+          <profiles>
+            <profile>
+              <id>github</id>
+              <repositories>
+                <repository>
+                  <id>central</id>
+                  <url>https://repo1.maven.org/maven2</url>
+                </repository>
+                <repository>
+                  <id>github</id>
+                  <url>https://maven.pkg.github.com/clanie/m2-repo</url>
+                  <snapshots>
+                    <enabled>true</enabled>
+                  </snapshots>
+                </repository>
+              </repositories>
+            </profile>
+          </profiles>
           <servers>
+            <server>
+              <id>github</id>
+              <username>${{ secrets.MAVEN_USERNAME }}</username>
+              <password>${{ secrets.MAVEN_PASSWORD }}</password>
+            </server>
             <server>
               <id>github-releases</id>
               <username>${{ secrets.MAVEN_USERNAME }}</username>
@@ -50,9 +76,10 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven-
 
-    - name: Deploy to GitHub Packages
+    - name: Build and deploy to GitHub Packages
       env:
         MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
         MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+      working-directory: ${{ github.workspace }}  # Set working directory to project root
       run: |
         mvn clean deploy -Dsettings.security=/path/to/maven-security-settings.xml
