--- a/pom.xml
+++ b/pom.xml
@@ -181,9 +181,14 @@
 			</dependency>
 			<dependency>
 				<groupId>dk.clanie</groupId>
-				<artifactId>clanie-test</artifactId>
+				<artifactId>clanie-mongo</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 			</dependency>
+            <dependency>
+                <groupId>dk.clanie</groupId>
+                <artifactId>clanie-test</artifactId>
+                <version>2.0.0-SNAPSHOT</version>
+            </dependency>
             <dependency>
                 <groupId>dk.clanie</groupId>
                 <artifactId>clanie-web</artifactId>
