Add SpotBugs dependency

--- a/pom.xml
+++ b/pom.xml
@@ -232,7 +232,13 @@
     </dependencyManagement>
 
 
-    <dependencies />
+    <dependencies>
+        <dependency>
+            <groupId>com.github.spotbugs</groupId>
+            <artifactId>spotbugs-annotations</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
 
     <distributionManagement>
