--- a/pom.xml
+++ b/pom.xml
@@ -77,18 +77,6 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>3.1.1</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.maven.scm</groupId>
-                        <artifactId>maven-scm-provider-gitexe</artifactId>
-                        <version>2.2.1</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-scm-plugin</artifactId>
                 <version>2.2.1</version>
                 <dependencies>
@@ -102,6 +90,24 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <version>0.9.0</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <!-- must match the <server><id> in ~/.m2/settings.xml -->
+                    <publishingServerId>central</publishingServerId>
+
+                    <!-- auto-publish after validation; disable if you prefer
+                    manual click in the Portal -->
+                    <autoPublish>true</autoPublish>
+
+                    <!-- block until fully visible on Maven Central; great for
+                    CI logs -->
+                    <waitUntil>published</waitUntil>
+                </configuration>
             </plugin>
         </plugins>
     </build>
@@ -233,18 +239,5 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
-
-
-    <distributionManagement>
-        <repository>
-            <id>github-releases</id>
-            <url>https://maven.pkg.github.com/clanie/m2-repo</url>
-        </repository>
-        <snapshotRepository>
-            <id>github-snapshots</id>
-            <url>https://maven.pkg.github.com/clanie/m2-repo</url>
-        </snapshotRepository>
-    </distributionManagement>
-
 
 </project>
