--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>dk.clanie</groupId>
     <artifactId>clanie-parent-pom</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
 
     <packaging>pom</packaging>
     <name>Clanie Parent POM</name>
@@ -187,22 +187,22 @@
             <dependency>
                 <groupId>dk.clanie</groupId>
                 <artifactId>clanie-core</artifactId>
-                <version>2.0.0-SNAPSHOT</version>
+                <version>2.0.0</version>
             </dependency>
             <dependency>
                 <groupId>dk.clanie</groupId>
                 <artifactId>clanie-mongo</artifactId>
-                <version>2.0.0-SNAPSHOT</version>
+                <version>2.0.0</version>
             </dependency>
             <dependency>
                 <groupId>dk.clanie</groupId>
                 <artifactId>clanie-test</artifactId>
-                <version>2.0.0-SNAPSHOT</version>
+                <version>2.0.0</version>
             </dependency>
             <dependency>
                 <groupId>dk.clanie</groupId>
                 <artifactId>clanie-web</artifactId>
-                <version>2.0.0-SNAPSHOT</version>
+                <version>2.0.0</version>
             </dependency>
 
             <!-- Miscellaneous-->
