--- a/pom.xml
+++ b/pom.xml
@@ -204,6 +204,11 @@
                 <artifactId>clanie-web</artifactId>
                 <version>2.0.1-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>dk.clanie</groupId>
+                <artifactId>clanie-eodhd-client</artifactId>
+                <version>2.0.1-SNAPSHOT</version>
+            </dependency>
 
             <!-- Miscellaneous-->
             <dependency>
