--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.5.7</version>
+        <version>4.0.0-RC2</version>
+        <relativePath/> <!-- Disables ../pom.xml lookup -->
     </parent>
 
     <groupId>dk.clanie</groupId>
@@ -236,6 +237,11 @@
                 <artifactId>guava</artifactId>
                 <version>33.5.0-jre</version>
             </dependency>
+            <dependency>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-annotations</artifactId>
+                <version>4.9.8</version>
+            </dependency>
 
             <dependency>
                 <groupId>com.github.java-json-tools</groupId>
@@ -246,13 +252,5 @@
         </dependencies>
     </dependencyManagement>
 
-
-    <dependencies>
-        <dependency>
-            <groupId>com.github.spotbugs</groupId>
-            <artifactId>spotbugs-annotations</artifactId>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
 
 </project>
