--- a/pom.xml
+++ b/pom.xml
@@ -236,11 +236,15 @@
                 <artifactId>guava</artifactId>
                 <version>33.5.0-jre</version>
             </dependency>
-
             <dependency>
                 <groupId>com.github.java-json-tools</groupId>
                 <artifactId>json-patch</artifactId>
                 <version>1.13</version>
+            </dependency>
+            <dependency>
+                <groupId>net.logstash.logback</groupId>
+                <artifactId>logstash-logback-encoder</artifactId>
+                <version>8.0</version>
             </dependency>
 
         </dependencies>
