--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,11 @@
             </dependency>
             <dependency>
                 <groupId>dk.clanie</groupId>
+                <artifactId>clanie-jobscheduler</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>dk.clanie</groupId>
                 <artifactId>clanie-nationalbanken-client</artifactId>
                 <version>2.0.1-SNAPSHOT</version>
             </dependency>
