Restore spotbugs-annotations dependency

--- a/pom.xml
+++ b/pom.xml
@@ -268,4 +268,13 @@
     </dependencyManagement>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>com.github.spotbugs</groupId>
+            <artifactId>spotbugs-annotations</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+
+
 </project>
