--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,15 @@
     <dependencyManagement>
         <dependencies>
 
+            <!-- Testcontainers BOM -->
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>testcontainers-bom</artifactId>
+                <version>1.20.4</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
             <!-- Clanie -->
             <dependency>
                 <groupId>dk.clanie</groupId>
